# carbonPaper

./: .gitignore  CONTRIBUTING.md  README.en.md  README.md  SECURITY.md  crowdin.yml  i18n.md  i18next-parser.config.mjs  i18next-scanner.config.cjs  i18next-scanner.config.js  memAnalysis.ipynb  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: backend-tests.yml  crowdin-download.yml  crowdin-upload.yml  release.yml
ai_embedding/: skill.md
browser-extension/: background.js  content.js  image_transport.js  image_transport.test.js  manifest.json  popup.html  popup.js
compliance_process/dicts/: dict_01.dict.enc  dict_02.dict.enc  dict_03.dict.enc  dict_04.dict.enc  dict_05.dict.enc
coverage/: index.html
coverage/lib/: analysis_api.js.html  api.js.html  auth_api.js.html  categories.js.html  index.html  monitor_api.js.html  ocr_url_detector.js.html  task_api.js.html  update_api.js.html  utils.js.html  version.js.html
docs/: python-removal-roadmap.md
monitor/: README.md  classifier.py  clustering_resources.py  constants.py  db_handler.py  debug_cli.py  debug_incognito.py  inspect_fd.py  logging_config.py  main.py  monitor_filters.json  numpy_tokenizer.py  ocr_data.db  ocr_engine.py  ocr_service.py  onnx_utils.py  paddleOCR.py  paddle_test_renamed.py  rapidocr_capability.py  requirements-test.txt  requirements.txt  reranker.py  screenshot_worker.py  smart_cluster_worker.py  storage_client.py  task_clustering.py  test.py  vector_store.py
monitor/monitor/: __init__.py  capture.py  clustering_commands.py  config.py  ipc_pipe.py  presidio_service.py  presidio_worker.py  presidio_zh_recognizers.py  worker_process.py  worker_supervisor.py
monitor/oracle/: README.md  fixtures.json  golden-v1.json
monitor/tests/: conftest.py  encrypt_dicts.py  test_classifier.py  test_classifier_lazy_index.py  test_for_ckip.py  test_ipc_pipe_auth_guard.py  test_ipc_pipe_request_integrity.py  test_migration_oracle.py  test_monitor_command_dispatch.py  test_monitor_config.py  test_presidio.py  (+13 more)
scripts/: build-ml.mjs  build-nmh.mjs  build-semantic-ml.mjs  bump-version.mjs  generate-latest-json.mjs  generate-update-signing-key.mjs  i18n-check.cjs  i18n-check.js  pack-portable.mjs  prepare-release-assets.ps1  security-guards.cjs  sign-update-manifest.mjs  update-smoke.ps1  verify-release-assets.mjs  verify-release-bundles.ps1  verify-semantic-runtime.mjs
src/: App.jsx  index.css  main.jsx
src-tauri/: .gitignore  .taurignore  Cargo.toml  app.manifest  build.rs  build_pyz.py  monitor_pipe_name.txt  nsis_hooks.nsh  tauri.conf.json  update-public-key.txt
src-tauri/capabilities/: default.json
src-tauri/semantic-worker/: Cargo.toml
src-tauri/semantic-worker/src/: main.rs
src-tauri/src/: analysis.rs  autostart.rs  capture.rs  credential_manager.rs  error.rs  error_window.rs  i18n.rs  idle.rs  lib.rs  logging.rs  main.rs  mcp_server.rs  mcp_token.rs  ml_contracts.rs  ml_protocol.rs  ml_runtime.rs  model_management.rs  monitor.rs  monitor_ipc.rs  native_messaging.rs  power.rs  python.rs  python_launcher.rs  registry_config.rs  resource_utils.rs  reverse_ipc.rs  reverse_ipc_protocol.rs  script_integrity.rs  semantic_engine.rs  semantic_models.rs  semantic_runtime.rs  sensitive_filter.rs  storage.rs  updater.rs
src-tauri/src/commands/: credential.rs  mcp.rs  migration.rs  mod.rs  smart_cluster.rs  storage.rs  utility.rs
src-tauri/src/storage/: derived_index.rs  encryption.rs  image_io.rs  link_scoring.rs  migration.rs  mod.rs  plaintext.rs  policy.rs  process.rs  schema.rs  screenshot.rs  search.rs  smart_cluster.rs  task.rs  types.rs
src-tauri/src/storage/migration/: bitmap_index.rs  data_dir.rs  dedup.rs  hmac.rs  mod.rs  plaintext.rs
tools/: capture_diagnostics.ps1  disk_wear_analyzer.md  disk_wear_analyzer.py  migration_oracle.py  validate_rust_semantic.py
(+182 files in other folders)
