[package]
name = "carbonpaper"
version = "0.4.5"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "carbonpaper_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
walkdir = "2.5.0"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2.3.7"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
winreg = "0.52"
which = "4.4"
runas = "0.2.0"
reqwest = { version = "0.11", features = ["blocking", "stream", "json"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
anyhow = "1.0.100"
percent-encoding = "2.3.2"
sysinfo = "0.30"
walkdir = "2.5.0"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
image = "0.25"
dirs = "5"
jieba-rs = "0.7"
once_cell = "1.19"
roaring = "0.11.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
flate2 = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_Security_Cryptography",
] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
