[package]
name = "carbonpaper-semantic-worker"
version = "0.8.3"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
hex = "0.4"
image = { version = "0.25", default-features = false }
ort = { version = "=2.0.0-rc.12", default-features = false, features = ["std", "ndarray", "load-dynamic", "directml", "api-24"] }
tokenizers = { version = "=0.21.4", default-features = false, features = ["fancy-regex"] }

[lints.clippy]
undocumented_unsafe_blocks = "warn"
